# RAG-ArticleQueryFilter

./: .gitignore  00_eda.ipynb  01_data_preparation.py  02_rag_index.ipynb  03_toxic_classifier.ipynb  04_api.py  05_retrieval_experiments.ipynb  README.md  pyproject.toml
dataset/: queries.csv
results/: retrieval_experiments.md
src/: __init__.py  api.py  backend.py  config.py  data.py  evaluation.py  experiments.py  indexing.py  query_filter.py  retrieval.py
tests/: test_api.py  test_data.py  test_evaluation.py  test_retrieval.py
