[project]
name = "rag-articlequeryfilter"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Filippo Pellizzari", email = "filippo.pellizzari109@gmail.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "wordcloud>=1.9.3",
    "chromadb>=0.5.11",
    "llama-index>=0.11.14",
    "ipywidgets>=8.1.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "black>=24.8.0",
    "pydantic>=2.9.2",
    "llama-index-vector-stores-chroma>=0.2.1",
    "llama-index-embeddings-huggingface>=0.3.1",
    "torch>=2.4.0",
    "llama-index-retrievers-bm25>=0.3.0",
    "sentence-transformers>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
