[project]
name = "rag-articlequeryfilter"
version = "0.1.0"
description = "Hybrid RAG retrieval system for news articles with toxic-query filtering."
readme = "README.md"
authors = [
    { name = "Filippo Pellizzari", email = "filippo.pellizzari109@gmail.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2.3",
    "chromadb>=0.5.11",
    "llama-index>=0.11.14",
    "llama-index-vector-stores-chroma>=0.2.1",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-retrievers-bm25>=0.3.0",
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",   # required by FastAPI TestClient
]

[project.scripts]
prepare-data    = "src.data:main"
run-experiments = "src.experiments:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
